<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/pic_login_bg"
                android:clipToPadding="true"
                android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_bg">

            <EditText
                android:id="@+id/edit_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/timing_register_get_certificate_code"
                android:background="@null"
                android:drawableLeft="@mipmap/pic_login_account_icon"
                android:drawablePadding="10dp"
                android:hint="@string/login_phone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_1"
                android:textSize="14sp"/>

            <com.coco3g.daishu.view.TimingView
                android:id="@+id/timing_register_get_certificate_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/get_verification"
                android:textColor="@color/white"
                android:textSize="13sp"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_register_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edit_bg"
            android:drawableLeft="@mipmap/pic_login_paw_icon"
            android:drawablePadding="10dp"
            android:hint="@string/phone_verification"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_1"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edit_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edit_bg"
            android:drawableLeft="@mipmap/pic_login_paw_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_1"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edit_register_recomd_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edit_bg"
            android:drawableLeft="@mipmap/pic_login_paw_icon"
            android:drawablePadding="10dp"
            android:hint="@string/recomd_code"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_1"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/relative_register_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_register_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/have_account"
                    android:textColor="@color/text_color_6"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tv_register_go_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_register_no_account"
                    android:gravity="right"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/go_login"
                    android:textColor="@color/white_2"
                    android:textSize="13sp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_register_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/shape_txt_white_bg"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:text="@string/register"
                android:textColor="@color/white_2"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_register_xieyi_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/register_xiyi_1"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_register_xieyi_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv_register_xieyi_1"
            android:gravity="center"
            android:text="@string/register_xiyi_2"
            android:textColor="@color/white"
            android:textSize="12sp"/>

    </RelativeLayout>


</RelativeLayout>
