<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_8"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <com.coco3g.daishu.view.TopBarView
        android:id="@+id/topbar_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.coco3g.daishu.view.TopBarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <EditText
                android:id="@+id/edit_forget_password_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/time_forget_password_get_verification"
                android:background="@null"
                android:hint="@string/register_phone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingTop="12dp"
                android:textColor="@color/text_color_1"
                android:textColorHint="@color/text_color_2"
                android:textSize="14sp" />

            <com.coco3g.daishu.view.TimingView
                android:id="@+id/time_forget_password_get_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_txt_red_bg"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="5dp"
                android:text="@string/get_verification"
                android:textColor="@color/text_color_1"
                android:textSize="12sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/edit_forget_password_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:hint="@string/register_verification"
            android:inputType="number"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="12dp"
            android:textColor="@color/text_color_1"
            android:textColorHint="@color/text_color_2"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/edit_forget_password_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:digits="@string/login_limit"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="12dp"
            android:textColor="@color/text_color_1"
            android:textColorHint="@color/text_color_2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_forget_password_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:digits="@string/login_limit"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="12dp"
            android:textColor="@color/text_color_1"
            android:textColorHint="@color/text_color_2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_forget_password_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/text_color_red_1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
