<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_login_userinfo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/pic_logo" />

    <LinearLayout
        android:id="@+id/linear_login_userinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@mipmap/pic_login_username_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_phone"
            android:inputType="number"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:textColor="@color/text_color_1"
            android:textColorHint="@color/text_color_2"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edit_login_phone"
            android:background="@color/text_color_2" />

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@mipmap/pic_verification_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/text_color_1"
            android:textColorHint="@color/text_color_2"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edit_login_phone"
            android:background="@color/text_color_2" />


        <TextView
            android:id="@+id/tv_login_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_txt_black_bg"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white_2"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_login_forgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:textColor="@color/text_color_6"
            android:textSize="13sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/linear_login_bottom_other_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="0.5"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="其他登录方式"
                android:textColor="@color/text_color_2"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="0.5"
                android:background="@color/black" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative_register_other_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_login_bottom_other_login"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/image_login_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/pic_weixin_icon" />

            <ImageView
                android:id="@+id/image_login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/image_login_weixin"
                android:src="@mipmap/pic_qq_icon" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_register_other_login"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/tv_login_kankan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/sui_bian_kankan"
                android:textColor="@color/text_color_1"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">


                <TextView
                    android:id="@+id/tv_login_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/no_account"
                    android:textColor="@color/text_color_2"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_login_no_account"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/tv_login_fast_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:drawableRight="@mipmap/pic_arrow_grey_right"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/go_register"
                        android:textColor="@color/text_color_1"
                        android:textSize="13sp" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
